tutorial softmax is dead

--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,3 +1,27 @@
+@TECHREPORT{Krizhevsky09learningmultiple,
+    author = {Alex Krizhevsky},
+    title = {Learning multiple layers of features from tiny images},
+    institution = {},
+    year = {2009}
+}
+
+@inproceedings{liu2019radam,
+ author = {Liu, Liyuan and Jiang, Haoming and He, Pengcheng and Chen, Weizhu and Liu, Xiaodong and Gao, Jianfeng and Han, Jiawei},
+ booktitle = {Proceedings of the Eighth International Conference on Learning Representations (ICLR 2020)},
+ month = {April},
+ title = {On the Variance of the Adaptive Learning Rate and Beyond},
+ year = {2020}
+}
+
+@misc{ioffe2015batch,
+      title={Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift}, 
+      author={Sergey Ioffe and Christian Szegedy},
+      year={2015},
+      eprint={1502.03167},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
 @misc{feng2020optimal,
       title={Optimal Machine Intelligence at the Edge of Chaos}, 
       author={Ling Feng and Lin Zhang and Choy Heng Lai},
