--- a/tgba/tgba.tex
+++ b/tgba/tgba.tex
@@ -160,7 +160,7 @@ While humans are demonstrably smarter than non-human animals, they do not seem t
 
 We posit that \textit{all} learning algorithms eventually converge to a fixed point during their development, called general intelligence: the best way to learn is to have infinite diversity, and the best way to deal with infinite diversity is to have generality, and the most usable generality is simple. If we view the brain as a system that naturally developed in the physical universe (by a process that we call evolution here) rather than one that spontaneously popped into existence, then it is natural that some of the most recent animals, such as humans, have general intelligence, which makes TGBA evolutionarily plausible.
 
-Humans possess an information-processing organ that fits what a brain does almost perfectly: the central nervous system (more commonly called "brain"). Studies indicate that it is self-reconfiguring, massively parallel, and analog: exactly the kind of qualities that are required for an efficient implementation of a simplest model of the brain.
+Humans possess an information-processing organ that fits what a brain does almost perfectly: the central nervous system (more commonly called "brain"). Studies indicate that it is self-reconfiguring, massively parallel, and analog (in some ways): exactly the kind of qualities that are required for an efficient implementation of a simplest model of the brain.
 
 With it, humans combine actions into whatever they want, in any way they decide. Unfortunately, because of generality, deducing anything from behavior of a human mind is synonymous with confirmation bias, though a correct theory will be able to represent any other theory within itself. This is why we are so non-specific and all-encompassing in the wording of this work.
 
@@ -206,30 +206,85 @@ We compare LDL and DL for the same parameter count (and computation time), with 
 
 More specifically, we simply connect the input vector to the output vector through $1$ hidden layer with batch normalization \cite{ioffe2015batch} and ReLU ($x \rightarrow \max(0,x)$). We use the batch size of $8$ and optimize via the Rectified Adam optimizer \cite{liu2019radam} with $\alpha=0.9$ and $\beta=0.95$. We vary $n$ ($n=N$ is DL) and pick the hidden-layer size to match the parameter count.
 
+Each LDL cycles through dimensions and multiplies by a matrix each time, until the dimensions are back in the original order. Non-linearities in between those matrix multiplications significantly hurt performance, and should only be placed between whole layers, as shown by Tables \ref{LDLintraVSinter} and \ref{LDLscaling}.
+
+Internally, to get around severe hardware limitations, we have implemented this on top of TensorFlowJS \cite{tensorflow2015-whitepaper}. The creators of its WebGL backend decided to only support rank $6$ tensors; as such, we cannot test $n=2$, but only $n=16$ and above.
+
+We do not share weight matrices across non-mixed dimensions, because otherwise, there would be very few parameters for small values of $n$. These matrices are initialized by drawing from $\mathcal{N}(0,\,1/in)$.
+
 We test on two datasets: Random and CIFAR-100 \cite{Krizhevsky09learningmultiple}.
 
 \begin{itemize}
-\item The Random dataset consists of $1024$ input-output pairs, both consisting of $1024$ numbers drawn from a normal distribution with mean $0$ and variance $1$. We minimize the L2 loss. This tests the capacity of the network directly.
-\item CIFAR-100 consists of $50000$ training image-label pairs, and $10000$ pairs for validation. Each pair has $3072$ inputs and $100$ one-hot outputs. We minimize the softmax loss (cross-entropy loss on a softmax activation), and also apply L1 regularization to the output with a multiplier of $10^-4$ for some reason. We do not apply any image-specific operations to inputs, and simply treat those as vectors of numbers, which tests capacity in isolation from generalization.
+\item The Random dataset consists of $1024$ input-output pairs, both consisting of $1024$ numbers drawn from a normal distribution with mean $0$ and variance $1$: $\mathcal{N}(0,\,1)$. For 204800 iterations, we minimize the L2 loss, with learning rate $3 \times 10^{-4}$. This tests the capacity of the network directly.
+
+At the very least, given the same amount of compute, LDL achieves lower loss than DL, as seen in Table \ref{randomLDLvsDL}.
+
+In Table \ref{LDLscaling}, we found that for LDL (low $n$), each hidden unit has much lower representational capacity than for DL (high $n$), however, since many more units can be packed, the overall capacity is higher.
+
+\item CIFAR-100 consists of $50000$ training image-label pairs, and $10000$ pairs for validation. Each pair has $3072$ inputs and $100$ one-hot outputs. We minimize the softmax loss (cross-entropy loss on a softmax activation), and also apply L1 regularization to the output with a multiplier of $10^{-4}$ for some reason. We do not apply any image-specific operations to inputs apart from normalizing each pixel to 0..1, and simply treat images as vectors of numbers, which tests capacity in isolation from generalization.
 \end{itemize}
 
-Each LDL cycles through dimensions and multiplies by a matrix each time, until the dimensions are back in the original order. Non-linearities in between those matrix multiplications significantly hurt performance, and should only be placed between whole layers. TODO: Show the result.
+\begin{table}
+\begin{center}
+\begin{tabular}{rcccc}
+\hline
+Params & $n$ & Hidden units & Non-linearity & Loss $\downarrow$ (mean $\pm$ std-dev) \\
+\hline
+1998848 & 16 & 48$\times$1024 & Intra & 0.001827 $\pm$ 0.0001134 \\
+1998848 & 16 & 48$\times$1024 & Inter & 0.000245 $\pm$ 0.0000018 \\
+\hline
+\end{tabular}
+\end{center}
+\caption{Those extra per-dimension matrix multiplications are not separate layers, so do not put non-linearities between them (Random).}
+\label{LDLintraVSinter}
+\end{table}
 
-Internally, to get around severe hardware limitations, we have implemented this on top of TensorFlowJS. The creators of its WebGL backend decided to only support rank $6$ tensors; as such, we cannot test $n=2$, but only $n=16$ and above.
+\begin{table}
+\begin{center}
+\begin{tabular}{ccrl}
+\hline
+Params & $n$ & Hidden units & Loss $\downarrow$ (mean $\pm$ std-dev) \\
+\hline
+2097152 & 1024 & 1$\times$1024 & 0.0012 $\pm$ 0.00014 \\
+1900544 & 128 & 12$\times$1024 & 0.00033 $\pm$ 0.00003 \\
+\textbf{1998848} & \textbf{16} & \textbf{48$\times$1024} & \textbf{0.000245 $\pm$ 0.0000018} \\
+\hline
+\end{tabular}
+\end{center}
+\caption{LDL outperforms DL on a simple model of arbitrary data (Random).}
+\label{randomLDLvsDL}
+\end{table}
 
-We do not share weight matrices across non-mixed dimension, because otherwise, there would be very few parameters.
+\begin{table}
+\begin{center}
+\begin{tabular}{cccc}
+\hline
+$n$ & Hidden units & Non-linearity & Loss $\downarrow$ \\
+\hline
+16 & 48$\times$1024 & Intra & 0.001827 \\
+16 & 16$\times$1024 & Intra & 0.086532 \\
+16 & 2$\times$1024 & Intra & 0.252734 \\
+\hline
+\textbf{16} & \textbf{48$\times$1024} & \textbf{Inter} & \textbf{0.000245} \\
+16 & 32$\times$1024 & Inter & 0.000291 \\
+16 & 16$\times$1024 & Inter & 0.043342 \\
+16 & 2$\times$1024 & Inter & 0.259245 \\
+\hline
+1024 & 1$\times$1024 & Yes & 0.001195 \\
+\hline
+\end{tabular}
+\end{center}
+\caption{The impact of the hidden layer size, also comparing inter-layer and intra-layer non-linearities (Random).}
+\label{LDLscaling}
+\end{table}
 
-    TODO: Have a table comparing runs (on the "Random" dataset) of linearithmic vs quadratic (mean and stddev of loss). (Sure hope that this trend of quadratic-is-worse continues into other experiments.) ("We intentionally tried to not over-think synthetic tests, so that it is more likely that they say something meaningful rather than a cherry-picked coincidence. This reduces the amount of computation that we need to perform.")
-
-    TODO: Present CIFAR-100-based comparisons, once we have them?
+    TODO: Present CIFAR-100-based comparisons in a table, once we have them.
 
     TODO: Compare with GAN-gating. If there is no difference, say so (ugh).
 
     TODO: Compare with RNN-based meta-learning.
 
-    TODO: Run GAN-gated RNNs with no inputs. Hopefully, it won't be completely indistinguishable from random noise. "The main objective of this section is to justify the hypothesis that we can extract interesting representations from no data, only self-interaction. This regime separates approaches which take diversity from data (which is the bulk of modern machine learning) and approaches which make their own diversity."
-
-// To fit our prior software and hardware constraints, we have implemented a machine learning framework on top of TensorFlowJS, which adds minor difficulty to our experiments, as we have to re-implement all infrastructure for every experiment. However, to implement the simplest Transformer-based version of TGBA, that complexity is unneeded. TODO: ...This probably should go into Criticisms, if anywhere.
+    TODO: Run GAN-gated RNNs with no inputs. Hopefully, it won't be completely indistinguishable from random noise. "The main objective of this subsection is to justify the hypothesis that we can extract interesting representations from no data, only self-interaction. This regime separates approaches which take diversity from data (which is the bulk of modern machine learning) and approaches which make their own diversity."
 
 \section{Discussion and Conclusion}
 
