`_limitTensorSize` now limits non-leading dims too

--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,3 +1,10 @@
+@inproceedings{Ravi2017OptimizationAA,
+  title={Optimization as a Model for Few-Shot Learning},
+  author={S. Ravi and H. Larochelle},
+  booktitle={ICLR},
+  year={2017}
+}
+
 @misc{tensorflow2015-whitepaper,
 title={ {TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
 url={https://www.tensorflow.org/},
