--- a/tgba/tgba.tex
+++ b/tgba/tgba.tex
@@ -40,7 +40,7 @@ How do humans face infinity?
 
 When attempting to describe approaches to AGI without grounding in code, humans end up constructing narratives from anecdotes about humans (such as \cite{DBLP:journals/corr/abs-2102-03406}), hoping to simplify complexity into a tractable formulation. Here, we have minimized the size of the mental model to the point where it is entirely contained in one or a few sentences, and we expand on them a lot in many ways including code, in a world indifferent to humans.
 
-This work follows the line of thinking \cite{10.5555/22939} \cite{fodor1983modularity} where, to deal with diverse tasks, many interacting parts are required, rather than a single "one-size-fits-all" entity: cannot use one number (such as $42$) to describe the world, have to use many.
+Reinforcement learning is similar to the proposed TGBA in many ways, though it lacks self-determination and efficiency, and pre-supposes a particular structure on loss and outputs (for reward maximization by actions).
 
 Cellular automata provide minimal models for systems in which arbitrary local rules operate on a fixed array in space and time. This operation is general, but not useful, in the sense that we cannot dynamically direct the evolution of a system to do what we want (such as maximizing an objective).
 
@@ -52,9 +52,7 @@ Wolfram models generalize cellular automata to memory with arbitrary connections
 
 Data analysis of recordings of biological brains supports attractor neural networks \cite{AMIT1990111}, where strong feedback causes the evolution of a recurrent network to settle into different attractor patterns. This hints at biological plausibility of recurrent neural networks (RNNs) \cite{1986Natur.323.533R}, where hidden state repeatedly incorporates input and produces output. Its loss (reason for change) is usually not learned.
 
-The field of meta-learning studies learning-to-learn: improvement of an inner optimization loop by an outer one. However, that outer loop must still have a static goal, therefore, meta-learning is not full generality. Mesa-optimization \cite{hubinger2019risks} refers to a situation where a learned model is itself an optimizer, which requires augmenting the model with memory for scaling learned optimization to practical episode lengths. (Mesa-optimization and meta-learning can be argued to be exactly the same, only framed differently.)
-
-     TODO: Mention that it's easy to do meta-learning with RNNs.
+The field of meta-learning studies learning-to-learn: improvement of an inner optimization loop by an outer one. However, that outer loop must still have a static goal, therefore, meta-learning is not full generality. Mesa-optimization \cite{hubinger2019risks} refers to a situation where a learned model is itself an optimizer, which requires augmenting the model with memory for scaling learned optimization to practical episode lengths: an RNN \cite{Ravi2017OptimizationAA}. Making the mesa-learner and learner close in capability by making input and weight sizes approximately equal (which our LDL largely accomplishes) may facilitate mesa-optimization in RNNs. (Mesa-optimization and meta-learning can be argued to be exactly the same, only framed differently: mesa-learner and its learner, vs learner and its meta-learner.)
 
 Intrinsically motivated reinforcement learning approaches \cite{6294131}, such as goal exploration \cite{DBLP:journals/corr/abs-1708-02190}, can be used instead of or in addition to human-specified rewards. This can learn more than simple reinforcement learning can, however, in practice, that intrinsic motivation is always a human-specified reason for change which cannot evolve, and as such, is not full generality.
 
@@ -208,7 +206,7 @@ More specifically, we simply connect the input vector to the output vector throu
 
 Each LDL cycles through dimensions and multiplies by a matrix each time, until the dimensions are back in the original order. Non-linearities in between those matrix multiplications significantly hurt performance, and should only be placed between whole layers, as shown by Tables \ref{LDLintraVSinter} and \ref{LDLscaling}.
 
-Internally, to get around severe hardware limitations, we have implemented this on top of TensorFlowJS \cite{tensorflow2015-whitepaper}. The creators of its WebGL backend decided to only support rank $6$ tensors; as such, we cannot test $n=2$, but only $n=16$ and above.
+Internally, to get around severe hardware limitations, we have implemented this on top of TensorFlowJS \cite{tensorflow2015-whitepaper}. The creators of its WebGL backend decided to only support rank $6$ tensors, which leaves us with 4 dimensions for use (1 is occupied by preventing false weight sharing, 1 may be the batch dimension); as such, we cannot test $n=2$, but only $n=16$ and above.
 
 We do not share weight matrices across non-mixed dimensions, because otherwise, there would be very few parameters for small values of $n$. These matrices are initialized by drawing from $\mathcal{N}(0,\,1/in)$.
 
@@ -221,7 +219,9 @@ At the very least, given the same amount of compute, LDL achieves lower loss tha
 
 In Table \ref{LDLscaling}, we found that for LDL (low $n$), each hidden unit has much lower representational capacity than for DL (high $n$), however, since many more units can be packed, the overall capacity is higher.
 
-\item CIFAR-100 consists of $50000$ training image-label pairs, and $10000$ pairs for validation. Each pair has $3072$ inputs and $100$ one-hot outputs. We minimize the softmax loss (cross-entropy loss on a softmax activation), and also apply L1 regularization to the output with a multiplier of $10^{-4}$ for some reason. We do not apply any image-specific operations to inputs apart from normalizing each pixel to 0..1, and simply treat images as vectors of numbers, which tests capacity in isolation from generalization.
+\item CIFAR-100 consists of $50000$ training image-label pairs, and $10000$ pairs for validation. Each pair has $3072$ inputs and $100$ one-hot outputs. We minimize the softmax loss (cross-entropy loss on a softmax activation), with learning rate $10^{-3}$, and also apply L1 regularization to the output with a multiplier of $10^{-4}$ for some reason. We do not apply any image-specific operations to inputs apart from normalizing each pixel to 0..1, and simply treat images as vectors of numbers, which tests capacity in isolation from generalization.
+
+We found that LDL increases training-set accuracy with almost no impact on test-set accuracy compared to DL, even if DL is trained longer (see Table \ref{LDLimages}). This suggests that increasing the size of the hidden layer increases model capacity, or at the very least, increases training efficiency.
 \end{itemize}
 
 \begin{table}
@@ -257,34 +257,53 @@ Params & $n$ & Hidden units & Loss $\downarrow$ (mean $\pm$ std-dev) \\
 
 \begin{table}
 \begin{center}
-\begin{tabular}{cccc}
+\begin{tabular}{ccc}
 \hline
-$n$ & Hidden units & Non-linearity & Loss $\downarrow$ \\
+$n$ & Hidden units & Loss $\downarrow$ \\
 \hline
-16 & 48$\times$1024 & Intra & 0.001827 \\
-16 & 16$\times$1024 & Intra & 0.086532 \\
-16 & 2$\times$1024 & Intra & 0.252734 \\
+1024 & 1$\times$1024 & 0.001195 \\
 \hline
-\textbf{16} & \textbf{48$\times$1024} & \textbf{Inter} & \textbf{0.000245} \\
-16 & 32$\times$1024 & Inter & 0.000291 \\
-16 & 16$\times$1024 & Inter & 0.043342 \\
-16 & 2$\times$1024 & Inter & 0.259245 \\
-\hline
-1024 & 1$\times$1024 & Yes & 0.001195 \\
+16 & 2$\times$1024 & 0.259245 \\
+16 & 16$\times$1024 & 0.043342 \\
+16 & 32$\times$1024 & 0.000291 \\
+\textbf{16} & \textbf{48$\times$1024} & \textbf{0.000245} \\
 \hline
 \end{tabular}
 \end{center}
-\caption{The impact of the hidden layer size, also comparing inter-layer and intra-layer non-linearities (Random).}
+\caption{The impact of the hidden layer size, with non-linearities only between layers (Random).}
 \label{LDLscaling}
 \end{table}
 
-    TODO: Present CIFAR-100-based comparisons in a table, once we have them.
+\begin{table}
+\begin{center}
+\begin{tabular}{cccccccc}
+\hline
+Reduced $d$ & $n$ & Hidden & Params & Iters & Time, s & train acc $\uparrow$ & test acc \\
+\hline
+--- & 3072 & 1536 & 7.23M & 500K & 50.8K & 66.99\% & 22.61\% \\
+--- & 3072 & 1536 & 7.23M & 1.0M & 101K & 85.59\% & 22.63\% \\
+--- & 3072 & 1536 & 7.23M & 1.5M & 154K & 89.67\% & 22.61\% \\
+--- & 3072 & 1536 & 7.23M & 2.0M & 206K & 91.41\% & 22.37\% \\
+\hline
+\textbf{Yes*} & \textbf{16} & \textbf{34000} & \textbf{7.16M} & \textbf{500K} & \textbf{52.0K} & \textbf{98.98\%} & \textbf{22.88\%} \\
+Full & 32 & 32768 & 5.44M* & 500K & 32.4K & 96.40\% & 24.27\% \\
+Full & 64 & 24576 & 7.01M & 500K & 49.2K & 90.68\% & 23.27\% \\
+\hline
+\end{tabular}
+\end{center}
+\caption{A comparison of Top-1 training-set accuracies (CIFAR-100). *The smaller tests refused to become bigger without exceptions in our code. For reduced $d$, one dimension had a bigger matrix multiplication instead, which generally reduces performance for bigger $n$ (not shown).}
+\label{LDLimages}
+\end{table}
 
-    TODO: Compare with GAN-gating. If there is no difference, say so (ugh).
+    TODO: Remove all the things with 3e-4 learning rate, because they're really quite an eyesore.
+
+\subsection{cGAN-gating}
+
+    TODO: Compare with cGAN-gating. If there is no difference, say so (ugh).
 
     TODO: Compare with RNN-based meta-learning.
 
-    TODO: Run GAN-gated RNNs with no inputs. Hopefully, it won't be completely indistinguishable from random noise. "The main objective of this subsection is to justify the hypothesis that we can extract interesting representations from no data, only self-interaction. This regime separates approaches which take diversity from data (which is the bulk of modern machine learning) and approaches which make their own diversity."
+    TODO: Run cGAN-gated RNNs with no inputs. Hopefully, it won't be completely indistinguishable from random noise. "The main objective of this subsection is to justify the hypothesis that we can extract interesting representations from no data, only self-interaction. This regime separates approaches which take diversity from data (which is the bulk of modern machine learning) and approaches which make their own diversity."
 
 \section{Discussion and Conclusion}
 
@@ -301,6 +320,8 @@ This work raises many questions which can be explored in the future, such as:
 \begin{itemize}
 \item Is our work is a special case of one of Schmidhuber's works?
 
+\item With linearithmic horizontal scaling, is it more efficient to grow feedforward networks in width or in depth?
+
 \item How big can we make it?
 
 \item Can proper self-determination learn useful behavior (such as maximizing a reward) from only being exposed to data, without external human-defined gradient? If not, then existence must be human-engineered.
@@ -310,20 +331,23 @@ This work raises many questions which can be explored in the future, such as:
 \item Can we find concrete recommendations on either increasing or decreasing the danger of AGI algorithms? Both are useful, as increasing the danger of an open-source algorithm for an individual decreases the danger for a group.
 \end{itemize}
 
-\subsection{Criticism}
+\section{Criticisms}
 
 Our approach exists, and thus it can be criticized, and in doing so changed.
 
 \begin{itemize}
+\item \textbf{Inconsistent pluralizations of acronyms.}
 \item \textbf{Many turns of phrase in this work are circular.} Similarly to how the topic of discussion is a self-reinforcing loop of intuitions, the discussion itself is a self-reinforcing loop of intuitions, to better highlight its topic. This is unavoidable in applied generality, though we did try to minimize such occurences.
 \item \textbf{No evidence to claims was presented.} We consider our claims (such as "humans do whatever") to be so non-specific that almost anything can be presented as evidence, so presenting anything in particular as evidence would bloat the text unnecessarily.
 \item \textbf{Rather that maximizing information via an adversarial game, why not optimize an information measure directly?} Making the information measure vague and learned allows it to adapt to a system, maximizing only useful information. For an example (which is bloat), most of almost any useful program are implementation details, which are important during development/debugging, but for finished algorithms, these details can and should be ignored.
+\item \textbf{The title is a meme.} "Transcendent Galaxy Brain Algorithms" is a sequence of words that best describes what is described with multiple approaches in this work, same as "Systems that Tightly Integrate Efficiency, Generality, and Time-Awareness" but much shorter and easier to remember.
 \item \textbf{Too much fun.} Consider this: if one only pays attention to the manner of presentation rather than what is presented, then can that one truly be called a scientist? We have already neutered the humor to near non-existence.
 \item \textbf{The suggested self-replication environments sound incredibly dangerous.} Though, much less dangerous than completely ignoring any possibilities of them arising in unforeseen circumstances, similarly to how a cleaning robot would put a bucket over its sensors to "remove" the mess. Knowledge is dangerous, but as a civilization, is it more dangerous to not have knowledge.
 \item \textbf{TGBA is not AGI-ready, as it lacks X.} It does not: it can do anything and represent anything, by definition. Though we can only hope that theoretical simplicity always translates well into practical simplicity.
 \item \textbf{Some places that narration strays to sound crackpot-like and cult-like.} General intelligence, by definition, can do anything and can be found in anything that is general enough. So it stands to reason that all attempts to reach it would pass through non-fashionable conceptual places. Still, we tried to ground text in concrete applications where we can, though our capabilities are limited.
 \item TODO: ...Shitty experiments? Need to actually perform the experiments first, though.
 \item TODO: ...No, some people really do think that the No Free Lunch Theorem means anything. Have to include it.
+\item \textbf{Why is there a section on self-criticism?} It exists to better illustrate generality by subversion, same as in art.
 \end{itemize}
 
 \section{Broader impact}
